src/ep.cc
@@ -3949,6 +3949,7 @@ ENGINE_ERROR_CODE EPBucket::rollback(uint16_t vbid, uint64_t rollbackSeqno) {
                 vb->checkpointManager.clear(vb, result.highSeqno);
                 vb->setPersistedSnapshot(result.snapStartSeqno, result.snapEndSeqno);
                 vb->incrRollbackItemCount(prevHighSeqno - result.highSeqno);
+                vb->setBackfillPhase(false);
                 return ENGINE_SUCCESS;
             }
         }
